--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "vue": "^2.5.11",
     "vue-router": "^3.0.2",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.0"
   },
   "browserslist": [
