--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.5.11",
     "vue-router": "^3.0.2",
     "vuelidate": "^0.7.4",
+    "vuetify": "^1.5.6",
     "vuex": "^3.1.0"
   },
   "browserslist": [
